# MixtComp

./: .cproject  .dockerignore  .gitignore  .gitmodules  .project  CMakeLists.txt  Dockerfile  LICENCE.md  Makefile  README  README.md  TODO.md  architecture.md  ci.sh  createStruct.sh  exclude-list.txt  exportStruct.sh  graphArchitecture.xcf  makefile  mcCleanUpdate.sh  mcUpdate.sh  mcUpdateNlopt.sh  updateVersion.py
JMixtComp/src/: CMakeLists.txt  CMakeLists.txt.in
JMixtComp/src/lib/: JSONGraph.cpp  jmc.cpp
JMixtComp/src/utest/: CMakeLists.txt
JsonMixtcomp/src/: CMakeLists.txt  main.cpp  mixt_DataExtractorJson.cpp  mixt_DataExtractorJson.h  mixt_DataHandlerJson.cpp  mixt_DataHandlerJson.h  mixt_Function_Json.cpp  mixt_Function_Json.h  mixt_ParamExtractorJson.cpp  mixt_ParamExtractorJson.h  mixt_ParamSetterJson.cpp  mixt_ParamSetterJson.h
JsonMixtcomp/src/exec/: CMakeLists.txt  main.cpp  mixt_DataExtractorJson.cpp  mixt_DataExtractorJson.h  mixt_DataHandlerJson.cpp  mixt_DataHandlerJson.h  mixt_Function_Json.cpp  mixt_Function_Json.h  mixt_ParamExtractorJson.cpp  mixt_ParamExtractorJson.h  mixt_ParamSetterJson.cpp  mixt_ParamSetterJson.h
MixtComp/: .clang-format  .cproject  .project  CMakeLists.txt  LINKS.md  Makefile  Makevars  Questions.md  README  README.md  README.txt  SGraph.md  TODO  TODO-current.md  TODO.md  Update-millisec.md  Update.md  Update2.md  UpdateStability.md  build.sh  buildCoverage.sh  buildDebug.sh  clean.sh  makefile  makevars  runTest.sh  runTestDebug.sh  runTestRelease.sh  testRun.sh  utest.sh  utestCoverage.sh  utestDebug.sh  utestRelease.sh  valgrindRun.sh
MixtComp/archive/: Makevars  SGraphVisJSON.cpp
MixtComp/archive/IO/: AlgType.h  AlgTypeVisitor.cpp  AlgTypeVisitor.h  Dummy.cpp  SGraph.h
MixtComp/archive/json/: AlgTypeVisJSON.cpp  AlgTypeVisJSON.h  JSONToSGraph.cpp
MixtComp/data/: composite1.csv  composite2.csv  dataDesc.csv  descriptor1.csv  descriptor2.csv  gammadata.csv  gaussiandata.csv  words_rank.txt
MixtComp/data/00-SimpleCase/: algo.json  data.json  desc.json
MixtComp/docs/: Graph.md  Proposal.aux  SGraph.md  SimpleMixture.md  algoDesc.md  dataFormat.md  developmentEnvironment.md  doc.aux  doc.tex  error.md  howToAddModel.md  howToAddModelInR.md  math.md  objectOutput.md  parallelism.md  runJMC.md  styleguide.md
MixtComp/docs/140101 - proposal/: ProjectSpecifications.txt  Proposal.aux  Proposal.tex  frameworkspecification.tex
MixtComp/docs/180308 - Initialization/: recap.ods
MixtComp/docs/SoftwareDesign/: architecture.dia
MixtComp/docs/StatisticalDocumentation/: DiagonalMixtures.dvi  DiagonalMixtures.tex  DiagonalMixtures.tex.backup
MixtComp/examples/: framework.cpp  hello.cpp  makefile  noFacade.cpp  readColumnDesc.cpp  sandbox.cpp
MixtComp/externlibs/: CMakeLists.txt
MixtComp/prog/: mcTest.cpp
MixtComp/regex/: README.txt
MixtComp/src/: CMakeLists.txt  CMakeLists.txt.in  CodeCoverage.cmake  mixt_MixtComp.h
MixtComp/src/Algo/: makefile  mixt_SEMAlgo.cpp  mixt_SEMAlgo.h
MixtComp/src/Composer/: makefile  mixt_IMixtureComposerBase.cpp  mixt_IMixtureComposerBase.h  mixt_MixtureComposer.cpp  mixt_MixtureComposer.h  mixt_ZClassInd.cpp  mixt_ZClassInd.h
MixtComp/src/Data/: CMakeLists.txt  mixt_AugmentedData.cpp  mixt_AugmentedData.h  mixt_CategoricalDataStat.cpp  mixt_CategoricalDataStat.h  mixt_CategoricalDenseDataStat.cpp  mixt_CategoricalDenseDataStat.h  mixt_ClassDataStat.cpp  mixt_ClassDataStat.h  mixt_ConfIntDataStat.h  mixt_DataHandlerR.cpp  mixt_DataHandlerR.h  mixt_GaussianDataStat.cpp  mixt_GaussianDataStat.h  mixt_MisValParser.h  mixt_PoissonDataStat.cpp  mixt_PoissonDataStat.h  mixt_ZClassInd.h
MixtComp/test/: 00-getenv.cpp  01-mcTest.cpp  02-mixtCompCluster.cpp  03-optimization.cpp  LinAlg.cpp  Ordinal.cpp  mcTest.cpp
MixtComp/tests/: makefile  simulComposite.cpp
MixtComp/utest/: Ordinal.cpp  UTest.h  UTestFunction.cpp  UTestFunction.h  UTestLinAlg.cpp  UTestNew.cpp  UTestOrdinal.cpp  UTestRank.cpp  UTestRankIndividual.cpp  UTestStatistics.cpp
MixtureFramework/: .cproject  .project  CMakeLists.txt  makefile
MixtureFramework/data/: gaussiandata.csv
MixtureFramework/examples/: CMakeLists.txt  gaussianexample.cpp
MixtureFramework/include/: include.h
MixtureFramework/src/: CMakeLists.txt
RMixtComp/src/: AlgTypeVisR.cpp  AlgTypeVisR.h  CMakeLists.txt  CPPToRMatrixType.h  CPPToRTranslate.cpp  CPPToRTranslate.h  CPPToRVectorType.h  Makevars  Makevars.debug  Makevars.release  Makevars.win  RGraph.cpp  RGraph.h  RToCPPTranslate.cpp  RToCPPTranslate.h  RToSGraph.cpp  RToSGraph.h  RTranslate.cpp  RTranslate.h  RcppExports.cpp  RcppExports.d  SGraphToR.cpp  SGraphToR.h  UTest.cpp  libOFiles  mainMixtComp.cpp  manualTest.cpp  mixtCompCluster.cpp  mixtCompCluster.d  mixtCompLearn.cpp  mixtCompPredict.cpp  mixtCompTest.cpp  mixtSimpleSampler.cpp  mixt_AugmentedData.h  mixt_Clust_Util.cpp  mixt_Clust_Util.h  mixt_DataExtractorR.cpp  mixt_DataExtractorR.h  mixt_DataHandlerR.cpp  mixt_DataHandlerR.h  (+29 more)
externlibraries/stkpp/: AUTHORS  CMakeLists.txt  COPYRIGHTS  Doxyfile  INSTALL  configure  makefile  makevars
pyMixtComp/: CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh  buildDebug.sh  buildRelease.sh  clean.sh  utest.sh  utestDebug.sh  utestRelease.sh  valgrindRun.sh
pyMixtComp/debug/: .cproject  .project
pyMixtComp/python/: README.md  build.sh  pyMixtComp.py  pyproject.toml  requirements.txt  setup.py
pyMixtComp/src/: CMakeLists.txt  PyGraph.cpp  PyGraph.h  PyGraph.hpp  pmc.cpp  pmc.h  pyMixtComp.cpp  pythonIO.h  translateCPPToPython.h  translateCPPToPython.hpp  translatePythonToCPP.h  translatePythonToCPP.hpp
pyMixtComp/utest/: CMakeLists.txt  UTestPyGraph.cpp
stkpp/: .cproject  .gitignore  .project  AUTHORS  CMakeLists.txt  COPYRIGHTS  Doxyfile  INSTALL  configure  log  makefile  makevars  makevars.local
stkpp/doc/: Doxylog
stkpp/include/: Algebra.h  Analysis.h  Arrays.h  Clustering.h  DManager.h  Reduct.h  Regress.h  Rmath.h  STKernel.h  STKpp.h  STatistiK.h  Sdk.h  StatModels.h
stkpp/projects/: CMakeLists.txt
stkpp/tests/: CMakeLists.txt
(+5833 files in other folders)
