[tool.poetry]
name = "pyMixtComp"
version = "0.1.3"
description = "Mixture models with heterogeneous data sets and partially missing data management."
authors = [
    "Vincent Kubicki",
    "Christophe Biernacki",
    "Quentin Grimonprez <quentingrim@yahoo.fr>",
    "Matthieu Marbac-Lourdelle",
    "Étienne Goffinet",
    "Serge Iovleff",
]

maintainers = [
    "Quentin Grimonprez <quentingrim@yahoo.fr>",
]

include = ["pyMixtComp/pyMixtCompBridge.so"]

packages = [
    {include = "pyMixtComp"}
]

keywords=["clustering", "mixture model", "heterogeneous", "missing data"]

readme = "README.md"

# see https://pypi.org/classifiers/
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

repository = "https://github.com/modal-inria/MixtComp"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
scikit-learn = "^1.0"
seaborn = ">0.11.2,<1"
pandas = ">=1.3,<3"

[tool.poetry.group.test.dependencies]
pytest = "^7.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"