# add all the projects
add_subdirectory(AAModels)
add_subdirectory(Algebra)
add_subdirectory(Analysis)
add_subdirectory(Arrays)
add_subdirectory(Clustering)
add_subdirectory(DManager)
add_subdirectory(Regress)
add_subdirectory(Reduct)
#add_subdirectory(Sdk)
add_subdirectory(STatistiK)
add_subdirectory(StatModels)
add_subdirectory(STKernel)
