# add all the tests
ADD_SUBDIRECTORY(AAModels)
ADD_SUBDIRECTORY(Algebra)
#ADD_SUBDIRECTORY(Analysis)
ADD_SUBDIRECTORY(Arrays)
ADD_SUBDIRECTORY(Clustering)
ADD_SUBDIRECTORY(DManager)
ADD_SUBDIRECTORY(Regress)
#ADD_SUBDIRECTORY(Reduct)
ADD_SUBDIRECTORY(STatistiK)
ADD_SUBDIRECTORY(StatModels)
ADD_SUBDIRECTORY(STKernel)

